test/libsolidity/syntaxTests/nameAndTypeResolution/300_invalid_fixed_types_7x8_mxn.sol
contract test {
    fixed7x8 c = 3.12345678;
}
// ----
// DeclarationError 7920: (20-28='fixed7x8'): Identifier not found or not unique.
